2012-01-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (htmlize-buffer): autoload htmlize.

2011-12-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable display time.

	* init-misc.el (init-emms): Update emms modeline setting.

2011-12-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (after-make-frame-functions): Fix background color.
	(after-make-frame-functions): Fix frame's background color.

	* init-misc.el (require): Fix highlight-symbol face.

	* init-basic.el (dired-mode-hook): Fix dired key setting(terminal
	can't know [return], only (kbd "RET")).
	: Fix dired's single buffer.
	: Delete diary window when appt-activate.

2011-12-13  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (inhibit-default-init): Disable load the default library.

2011-12-12  Meteor Liu  <meteor1113@gmail.com>

	* README (Email): Update README.

2011-11-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("code-imports"): Add code-imports.el

2011-11-02  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (fboundp): Change ecb-compile-window-height to 0.15

2011-10-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (appt-display-duration): Don't delete appt window.

2011-10-19  Meteor Liu  <meteor1113@gmail.com>

	* lisp/codepilot/misc/smart-hl.el: Get a new smart-hl.el for emacs24.

2011-10-17  Meteor Liu  <meteor1113@gmail.com>

	* Update emacs-calfw from v1.2 to v1.3

2011-10-16  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Set auto-complete for eshell.

2011-10-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("sqlplus"): Use mouse-2 instead of c-mouse-1.

2011-10-05  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (user-include-dirs): Fix user-include-dirs.

2011-09-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Fix tabbar font in win7.

	* init-site.el (boundp): Fix ecb compatible with emacs24, because stack-trace-on-error.

2011-09-22  Meteor Liu  <meteor1113@gmail.com>
